# phalanx

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
crates/device-util/src/: device.rs  driver.rs  error.rs
crates/device-util/tests/: get_device_list.rs  test_functions.rs
crates/dpdk-rs/: Cargo.toml
crates/dpdk-rs/src/: lib.rs
crates/dpdk-sys/: Cargo.toml  build.rs
crates/dpdk-sys/src/: lib.rs
crates/port/: Cargo.toml
mangonel/: Cargo.toml
mangonel-core/: Cargo.toml
mangonel-core/src/: error.rs  lib.rs  mmap.rs  util.rs
mangonel-device-util/: Cargo.toml
mangonel-device-util/src/: device.rs  driver.rs  error.rs
mangonel-device-util/tests/: test_functions.rs
mangonel-dpdk-sys/: build.rs  wrapper.c
mangonel-libxdp-rs/: Cargo.toml
mangonel-libxdp-rs/src/: buffer.rs  descriptor.rs  lib.rs  ring_buffer.rs  socket.rs  umem.rs  util.rs
mangonel-libxdp-sys/: Cargo.toml  build.rs  wrapper.h
mangonel-mmap/: Cargo.toml
mangonel-mmap/src/: lib.rs  mmap.rs
mangonel/src/: buffer.rs  descriptor.rs  frame.rs  interface.rs  lib.rs  main.rs  mmap.rs  packet.rs  policy.rs  ring.rs  socket.rs  umem.rs  util.rs
scripts/: initialize.sh  install_dependencies.sh  install_dpdk.sh
xdp/xdp-rs/: Cargo.toml
xdp/xdp-sys/: Cargo.toml  build.rs  wrapper.h
