[workspace]
members = [
    "crates/dpdk-rs",
    "crates/dpdk-sys",
]
resolver = "2"

[workspace.package]
authors = ["Donghoon Lee <zombiedelah@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
# local
dpdk-rs = { path = "./crates/dpdk-rs" }
dpdk-sys = { path = "./crates/dpdk-sys" }