[workspace]
members = [
    "crates/dpdk-sys",
    "crates/driver-util",
]
resolver = "2"

[workspace.package]
authors = ["Donghoon Lee <zombiedelah@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
dpdk-sys = { path = "./crates/dpdk-sys" }
driver-util = { path = "./crates/driver-util" }