[workspace]
members = [
    "mangonel",
    "mangonel-device-util",
    "mangonel-dpdk-sys",
]
resolver = "2"

[workspace.package]
authors = ["Donghoon Lee <zombiedelah@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
device-util = { path = "./mangonel-device-util" }
dpdk-sys = { path = "./mangonel-dpdk-sys" }