[package]
name = "mangonel"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
core_affinity = "0.8"
const-hex = "1.12"
ctrlc = "3.4"
mangonel-libxdp-rs = { path = "../mangonel-libxdp-rs" }
pnet = "0.35"
serde = { version = "1", features = ["derive"] }
toml = "0.8"